[package]
name = "Bot-Lord"
version = "0.1.0"
authors = ["XVadorZ <eliecharlesdesaulniers@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "0.2.0", features = ["macros"]}
serenity = {default-features = false, features = ["client", "gateway", "model", 
"rustls_backend"], version = "0.9.0-rc.4"}

